--- a/simple-trello/package.json
+++ b/simple-trello/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.78",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
